fix: marquee overflow

--- a/src/app/marquee.module.css
+++ b/src/app/marquee.module.css
@@ -1,5 +1,6 @@
 .marquee {
   width: 100vw;
+  max-width: 100vw;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -21,7 +22,7 @@
 @keyframes marquee-left {
   0% {
     transform: translateX(0%);
-  } 
+  }
   100% {
     transform: translateX(-60%);
   }
